// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PluginManagement should match snapshot 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <form
    className="form-horizontal"
    role="form"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Upload Plugin: "
          id="admin.plugin.uploadTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <div
          className="file__upload"
        >
          <button
            className="btn btn-primary"
            disabled={false}
          >
            <FormattedMessage
              defaultMessage="Choose File"
              id="admin.plugin.choose"
              values={Object {}}
            />
          </button>
          <input
            accept=".gz"
            disabled={false}
            onChange={[Function]}
            type="file"
          />
        </div>
        <button
          className="btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Upload"
            id="admin.plugin.upload"
            values={Object {}}
          />
        </button>
        <div
          className="help-text no-margin"
        />
        <p
          className="help-text"
        >
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Upload a plugin for your Mattermost server. See [documentation](!https://about.mattermost.com/default-plugin-uploads) to learn more."
            id="admin.plugin.uploadDesc"
          />
        </p>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Installed Plugins: "
          id="admin.plugin.installedTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <p
          className="help-text"
        >
          <FormattedHTMLMessage
            defaultMessage="Installed plugins on your Mattermost server. Pre-packaged plugins are installed by default, and can be disabled but not removed."
            id="admin.plugin.installedDesc"
            values={Object {}}
          />
        </p>
        <br />
      </div>
    </div>
  </form>
</div>
`;

exports[`components/PluginManagement should match snapshot, No installed plugins 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <form
    className="form-horizontal"
    role="form"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Upload Plugin: "
          id="admin.plugin.uploadTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <div
          className="file__upload"
        >
          <button
            className="btn btn-primary"
            disabled={false}
          >
            <FormattedMessage
              defaultMessage="Choose File"
              id="admin.plugin.choose"
              values={Object {}}
            />
          </button>
          <input
            accept=".gz"
            disabled={false}
            onChange={[Function]}
            type="file"
          />
        </div>
        <button
          className="btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Upload"
            id="admin.plugin.upload"
            values={Object {}}
          />
        </button>
        <div
          className="help-text no-margin"
        />
        <p
          className="help-text"
        >
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Upload a plugin for your Mattermost server. See [documentation](!https://about.mattermost.com/default-plugin-uploads) to learn more."
            id="admin.plugin.uploadDesc"
          />
        </p>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Installed Plugins: "
          id="admin.plugin.installedTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <p
          className="help-text"
        >
          <FormattedHTMLMessage
            defaultMessage="Installed plugins on your Mattermost server. Pre-packaged plugins are installed by default, and can be disabled but not removed."
            id="admin.plugin.installedDesc"
            values={Object {}}
          />
        </p>
        <br />
        <FormattedMessage
          defaultMessage="No installed plugins."
          id="admin.plugin.no_plugins"
          values={Object {}}
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`components/PluginManagement should match snapshot, disabled 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <Banner
    description={
      <InjectIntl(FormattedMarkdownMessage)
        defaultMessage="Plugins are disabled on your server. To enable them, go to **Plugins > Configuration**."
        id="admin.plugin.management.banner"
      />
    }
    title={<div />}
  />
</div>
`;

exports[`components/PluginManagement should match snapshot, upload disabled 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <form
    className="form-horizontal"
    role="form"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Upload Plugin: "
          id="admin.plugin.uploadTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <div
          className="file__upload"
        >
          <button
            className="btn"
            disabled={true}
          >
            <FormattedMessage
              defaultMessage="Choose File"
              id="admin.plugin.choose"
              values={Object {}}
            />
          </button>
          <input
            accept=".gz"
            disabled={true}
            onChange={[Function]}
            type="file"
          />
        </div>
        <button
          className="btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Upload"
            id="admin.plugin.upload"
            values={Object {}}
          />
        </button>
        <div
          className="help-text no-margin"
        />
        <p
          className="help-text"
        >
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="To enable plugin uploads, go to **Plugins > Configuration**. See [documentation](!https://about.mattermost.com/default-plugin-uploads) to learn more."
            id="admin.plugin.uploadDisabledDesc"
          />
        </p>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Installed Plugins: "
          id="admin.plugin.installedTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <p
          className="help-text"
        >
          <FormattedHTMLMessage
            defaultMessage="Installed plugins on your Mattermost server. Pre-packaged plugins are installed by default, and can be disabled but not removed."
            id="admin.plugin.installedDesc"
            values={Object {}}
          />
        </p>
        <br />
      </div>
    </div>
  </form>
</div>
`;

exports[`components/PluginManagement should match snapshot, with installed plugins 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <form
    className="form-horizontal"
    role="form"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Upload Plugin: "
          id="admin.plugin.uploadTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <div
          className="file__upload"
        >
          <button
            className="btn btn-primary"
            disabled={false}
          >
            <FormattedMessage
              defaultMessage="Choose File"
              id="admin.plugin.choose"
              values={Object {}}
            />
          </button>
          <input
            accept=".gz"
            disabled={false}
            onChange={[Function]}
            type="file"
          />
        </div>
        <button
          className="btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Upload"
            id="admin.plugin.upload"
            values={Object {}}
          />
        </button>
        <div
          className="help-text no-margin"
        />
        <p
          className="help-text"
        >
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Upload a plugin for your Mattermost server. See [documentation](!https://about.mattermost.com/default-plugin-uploads) to learn more."
            id="admin.plugin.uploadDesc"
          />
        </p>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Installed Plugins: "
          id="admin.plugin.installedTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <p
          className="help-text"
        >
          <FormattedHTMLMessage
            defaultMessage="Installed plugins on your Mattermost server. Pre-packaged plugins are installed by default, and can be disabled but not removed."
            id="admin.plugin.installedDesc"
            values={Object {}}
          />
        </p>
        <br />
        <div
          className="alert alert-transparent"
        >
          <PluginItem
            handleDisable={[Function]}
            handleEnable={[Function]}
            handleRemove={[Function]}
            hasSettings={true}
            key="plugin_0"
            pluginStatus={
              Object {
                "active": false,
                "description": "The plugin 0.",
                "id": "plugin_0",
                "instances": Array [
                  Object {
                    "cluster_id": "cluster_id_1",
                    "state": 0,
                    "version": "0.1.0",
                  },
                ],
                "is_prepackaged": false,
                "name": "Plugin 0",
                "state": 0,
                "version": "0.1.0",
              }
            }
            removing={false}
            showInstances={true}
          />
          <PluginItem
            handleDisable={[Function]}
            handleEnable={[Function]}
            handleRemove={[Function]}
            hasSettings={true}
            key="plugin_1"
            pluginStatus={
              Object {
                "active": true,
                "description": "The plugin.",
                "id": "plugin_1",
                "instances": Array [
                  Object {
                    "cluster_id": "cluster_id_1",
                    "state": 0,
                    "version": "0.0.1",
                  },
                  Object {
                    "cluster_id": "cluster_id_2",
                    "state": 2,
                    "version": "0.0.2",
                  },
                ],
                "is_prepackaged": false,
                "name": "Plugin 1",
                "state": 5,
                "version": "0.0.1",
              }
            }
            removing={false}
            showInstances={true}
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`components/PluginManagement should match snapshot, with installed plugins and not settings link 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Management"
      id="admin.plugin.management.title"
      values={Object {}}
    />
  </h3>
  <form
    className="form-horizontal"
    role="form"
  >
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Upload Plugin: "
          id="admin.plugin.uploadTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <div
          className="file__upload"
        >
          <button
            className="btn btn-primary"
            disabled={false}
          >
            <FormattedMessage
              defaultMessage="Choose File"
              id="admin.plugin.choose"
              values={Object {}}
            />
          </button>
          <input
            accept=".gz"
            disabled={false}
            onChange={[Function]}
            type="file"
          />
        </div>
        <button
          className="btn"
          disabled={true}
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Upload"
            id="admin.plugin.upload"
            values={Object {}}
          />
        </button>
        <div
          className="help-text no-margin"
        />
        <p
          className="help-text"
        >
          <InjectIntl(FormattedMarkdownMessage)
            defaultMessage="Upload a plugin for your Mattermost server. See [documentation](!https://about.mattermost.com/default-plugin-uploads) to learn more."
            id="admin.plugin.uploadDesc"
          />
        </p>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="control-label col-sm-4"
      >
        <FormattedMessage
          defaultMessage="Installed Plugins: "
          id="admin.plugin.installedTitle"
          values={Object {}}
        />
      </label>
      <div
        className="col-sm-8"
      >
        <p
          className="help-text"
        >
          <FormattedHTMLMessage
            defaultMessage="Installed plugins on your Mattermost server. Pre-packaged plugins are installed by default, and can be disabled but not removed."
            id="admin.plugin.installedDesc"
            values={Object {}}
          />
        </p>
        <br />
        <div
          className="alert alert-transparent"
        >
          <PluginItem
            handleDisable={[Function]}
            handleEnable={[Function]}
            handleRemove={[Function]}
            hasSettings={false}
            key="plugin_0"
            pluginStatus={
              Object {
                "active": false,
                "description": "The plugin 0.",
                "id": "plugin_0",
                "instances": Array [
                  Object {
                    "cluster_id": "cluster_id_1",
                    "state": 0,
                    "version": "0.1.0",
                  },
                ],
                "is_prepackaged": false,
                "name": "Plugin 0",
                "state": 0,
                "version": "0.1.0",
              }
            }
            removing={false}
            showInstances={true}
          />
          <PluginItem
            handleDisable={[Function]}
            handleEnable={[Function]}
            handleRemove={[Function]}
            hasSettings={false}
            key="plugin_1"
            pluginStatus={
              Object {
                "active": true,
                "description": "The plugin.",
                "id": "plugin_1",
                "instances": Array [
                  Object {
                    "cluster_id": "cluster_id_1",
                    "state": 0,
                    "version": "0.0.1",
                  },
                  Object {
                    "cluster_id": "cluster_id_2",
                    "state": 2,
                    "version": "0.0.2",
                  },
                ],
                "is_prepackaged": false,
                "name": "Plugin 1",
                "state": 5,
                "version": "0.0.1",
              }
            }
            removing={false}
            showInstances={true}
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
